--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,10 @@ body {
 }
 
 :root {
-    --primary: #e63946;
+    --primary: #457b9d;
     --secondary: #f1faee;
     --warning: #ffb703;
-    --success: #457b9d;
+    --success: #4b9e1e;
     --info: #a8dadc;
     --dark: rgb(45, 45, 45);
     --altezza-footer: 50px;
@@ -23,6 +23,15 @@ body {
 .bg-primary {
     background-color: var(--primary) !important;
     color: var(--secondary);
+}
+.btn-primary{
+    color: var(--secondary);
+    background-color: var(--primary);
+    border-color: var(--primary);
+}
+.btn-primary:hover{
+    background-color: var(--primary);
+    border-color: var(--primary);
 }
 
 .center-center {
