--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,22 +3,14 @@
         LOGO
     </div>
     <div class="col-10 distanzia-equamente">
-        <div class="" routerLink="/home"> <!-- nome del componente HOME -->
+        <div class="" routerLink="/"> <!-- oppure nome del componente HOME -->
             HOME
         </div>
-        <div *ngFor="let coast of ['east','west']" [routerLink]="'/coast/'+coast" >
-            {{coast}}
+        <div class="" routerLink="/meteo">
+            Meteo
         </div>
-
-        <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" 
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-            </button>
-            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <a class="dropdown-item" routerLink="/comp1">Comp1</a>
-                <a class="dropdown-item" routerLink="/comp2">Comp2</a>
-            </div>
+        <div class="" routerLink="/graficoclima">
+            Cambiamento climatico
         </div>
     </div>
 </div>
