--- a/src/app/components/ricerca/ricerca.component.html
+++ b/src/app/components/ricerca/ricerca.component.html
@@ -1,8 +1,11 @@
 <div>
-    <input type="text" [(ngModel)]="ricerca">
-    <button class="btn btn-secondary" (click)="cerca()">
-        Cerca
-    </button>
+    <div class="row no-gutters my-3 px-2">
+        <input class="col-9" type="text" [(ngModel)]="ricerca">
+        <div class="col-1"></div>
+        <button class="btn btn-secondary col-2" (click)="cerca()">
+            Cerca
+        </button>
+    </div>
     <div class="row no-gutters px-2" *ngIf="datiCitta.length > 0">
         <div class="col-2">Stato</div>
         <div class="col-4">Nome</div>
