--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
+
 <router-outlet style="margin-bottom: 500px;"></router-outlet>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+<app-datapicker (dataScelta)="impostaData($event)" ></app-datapicker>
